fix: use visibility instead of display to let resizable table work right

--- a/src/ui/ResizableTable/ResizableTable.scss
+++ b/src/ui/ResizableTable/ResizableTable.scss
@@ -22,7 +22,7 @@ table.rt-table {
   }
 }
 
-#rt-td1 {
+.rt-td1 {
   border-right: 1px solid #cacdd1;
 }
 
