--- a/src/ui/index.scss
+++ b/src/ui/index.scss
@@ -1,3 +1,16 @@
 body {
   margin: 0;
 }
+
+.devtool-container {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  &.show {
+    visibility: visible;
+  }
+  &.hide {
+    visibility: hidden;
+  }
+}
